--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
-        System.import('app').catch(function (err) {
-            console.error(err);
+        System.config({
+            packages: {'build': {defaultExtension: 'js'}}
         });
+        System.import('build/main');
     </script>
 </head>
 <!-- 3. Display the application -->
