--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Angular QuickStart</title>
+    <title>Books manager</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -24,6 +24,6 @@
 </head>
 <!-- 3. Display the application -->
 <body>
-<my-app>Loading...</my-app>
+<books-app></books-app>
 </body>
 </html>
